--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -9,7 +9,7 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "component/tic-tac-toe";
+@import "components/game";
 
 @import "layout/wrapper";
 @import "layout/container";
